[package]
name = "async-wg"
version = "0.1.1"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
description = "Async version WaitGroup for RUST."
repository = "https://github.com/jmjoy/async-wg.git"
license = "Unlicense"
readme = "README.md"
keywords = ["async", "future", "waitgroup"]

[dependencies]
futures-util = "0.3.3"

[dev-dependencies]
tokio = { version = "0.2.11", features = ["full"] }
futures-timer = "3.0.1"
