[package]
name = "async-wg"
version = "0.1.2"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
description = "Async version WaitGroup for RUST."
repository = "https://github.com/jmjoy/async-wg.git"
license = "Unlicense"
readme = "README.md"
keywords = ["async", "future", "waitgroup"]

[dependencies]
futures-util = "0.3.3"
tokio = { version = "0.2",features = ["full"] }
futures="0.3"
[dev-dependencies]

futures-timer = "3.0.1"
